# rust-vs-py-polars-benchark

./: README.md
polars-benchmark/: LICENSE  pyproject.toml
polars-benchmark/.github/workflows/: benchmark.yml
polars-benchmark/python_benchmarks/: __init__.py  benchmarks.py  runner.py
polars-benchmark/rust-benchmarks/: Cargo.toml
polars-benchmark/rust-benchmarks/src/: main.rs
polars-benchmark/scripts/: compare_results.py  generate_report.py  run_all_benchmarks.py
results/: python_results.json
