[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python-benchmarks"]

[project]
name = "polars-benchmark"
version = "0.1.0"
description = "Benchmark suite comparing Polars Python vs Rust performance"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.8"
dependencies = [
    "polars>=0.18.0",
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.5.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "jinja2>=3.0.0",
    "s3fs>=2023.1.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]


[project.scripts]
polars-benchmark = "python_benchmarks.runner:main"

# uv-specific configurations
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]