[package]
name = "polars-rust-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.32", features = ["lazy", "temporal", "strings", "parquet", "aws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
rpath = false

[profile.dev]
opt-level = 1
debug = 2
overflow-checks = true

[profile.ci]
inherits = "dev"
debug = 1
incremental = false